--- a/css/mrqss-superb-project.webflow.css
+++ b/css/mrqss-superb-project.webflow.css
@@ -39,7 +39,7 @@ h3 {
   margin-bottom: 10px;
   font-size: 60px;
   line-height: 1.3;
-  font-weight: 600;
+  font-weight: 400;
 }
 
 h4 {
@@ -1202,6 +1202,9 @@ figcaption {
   margin-right: auto;
   margin-left: auto;
   line-height: 1.35;
+  font-family: Manrope;
+  font-weight: 300;
+  text-align: left;
 }
 
 .content-details h3 {
@@ -1968,6 +1971,7 @@ figcaption {
 
   h3 {
     font-size: 40px;
+    font-weight: 400;
   }
 
   h4 {
@@ -2257,7 +2261,7 @@ figcaption {
 
   h3 {
     font-size: 30px;
-    font-weight: 500;
+    font-weight: 400;
   }
 
   h4 {
