--- a/css/index.css
+++ b/css/index.css
@@ -177,6 +177,13 @@ li {
   font-size: 1.25rem;
 }
 
+.gif {
+  display: flex;
+  max-width: 400px;
+  margin: 1rem auto 3rem auto;
+  border: 1px solid #59575a;
+}
+
 /* artifacts */
 .artifacts-container {
   width: 100%;
