--- a/css/mrqss-superb-project.webflow.css
+++ b/css/mrqss-superb-project.webflow.css
@@ -923,7 +923,7 @@ figcaption {
   width: 530px;
   height: 200%;
   max-width: 140%;
-  background-image: url("../images/ezgif.com-optimize.gif");
+  background-image: url("https://media.giphy.com/media/VLBg5mRQVEiI/giphy.gif");
   background-position: 50% 50%;
   background-size: cover;
   opacity: 0;
