--- a/css/about.css
+++ b/css/about.css
@@ -53,3 +53,16 @@
     max-width: 90vw;
   }
 }
+
+.about-video {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
+}
+.about-video iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
