--- a/css/index.css
+++ b/css/index.css
@@ -184,8 +184,21 @@ li {
   border: 1px solid #59575a;
 }
 
+@media screen and (max-width: 400px) {
+  .gif {
+    display: flex;
+    max-width: 300px;
+    margin: 1rem auto 3rem auto;
+    border: 1px solid #59575a;
+  }
+}
+
 /* artifacts */
 .artifacts-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   margin: 4rem 0;
 }
