--- a/css/rarety.css
+++ b/css/rarety.css
@@ -1133,3 +1133,9 @@ table.kw-info-table {
   color: #4285f4;
   border-bottom: 3px solid #4285f4;
 }
+
+.full-width-img {
+  width: 90%;
+  max-width: 800px;
+  margin: 1rem auto;
+}
